--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "install-server": "cd server && npm install",
-    "start-server": "cd server && node app.js",
+    "start-server": "cd server && node index.js",
     "install-client": "cd galler && npm install",
     "build-client": "cd gallery && npm run build",
     "start-client": "cd gallery && npm run start"
