--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^8.0.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=18.17.0 <19.0.0"
   }
 }
