--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "install-server": "cd server && npm install",
-    "start-server": "cd server && node index.js",
-    "install-client": "cd gallery && npm install",
-    "build-client": "cd gallery && npm run build",
-    "start-client": "cd gallery && npm run start"
+    "start-server": "cd server && node server.js",
+    "install-client": "cd client && npm install",
+    "build-client": "cd client && npm run build",
+    "start-client": "cd client && npm run start"
   },
   "keywords": [],
   "author": "",
